<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="football_activity">Football Match</string>
    <string name="gaelic_activity">Gaelic Match</string>
    <string name="hurling_activity">Hurling Match</string>
    <string name="rugby_activity">Rugby Match</string>
    <string name="statistics_activity">Statistics</string>
    <string name="exit">Exit</string>
    
    <string name="hello">Hello World, MainMenu!</string>
    <string name="app_name">Match Tracker</string>
	<string name="title_home">Home</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="time">0:00</string>
    <string name="goal">Goal</string>
    <string name="matchInfo">\n Match Information: </string>
    <string name="footballBNString">Create football match</string>
    <string name="gaelicBNString">Create gaelic football match</string>
    <string name="hurlingBNString">Create hurling match</string>
    <string name="rugbyBNString">Create rugby match</string>
    <string name="viewTableBNString">View table</string>
    <string name="team1TV">Team 1:</string>
    <string name="Empty"></string>
    <string name="team2TV">Team 2:</string>
    <string name="friendlyString">Friendly</string>
    <string name="CupString">Cup</string>
    <string name="leagueString">League</string>
    <string name="TypeString">Type:</string>
    <string name="VenueString">Venue:</string>
    <string name="numOfPlayersString">Number of Players:</string>
    <string name="numOfPlayers">11</string>
    <string name="minutesPerHalfString">Minutes Per Half:</string>
    <string name="minutesPerHalfTime">45</string>
    <string name="refereeNameString">Enter Referee Name:</string>
    <string name="createMatchString">Create Match</string>
    <string name="minutesPerHalfGaelic">35</string>
    <string name="numOfPlayersGaelic">15</string>
    <string name="leagueCupNameString">League/Cup name:</string>
    <string name="goalValueString">Goal Value:</string>
    <string name="goalValue">3</string>
    <string name="pointValueString">Point value:</string>
    <string name="pointValue">1</string>
    <string name="minutesPerHalfRugby">40</string>
    <string name="tryValueString">Try value:</string>
    <string name="conversionValueString">Conversion Value:</string>
    <string name="penaltyValueString">Penalty value:</string>
    <string name="dropGoalString">Drop goal:</string>
    <string name="tryValue">5</string>
    <string name="conversionValue">2</string>
    <string name="penaltyValue">3</string>
    <string name="dropGoalValue">3</string>
    <string name=":">:</string>
    <string name="teamInvolved">Team Involved:</string>
    <string name="playerName">Player Name:</string>
    <string name="createMatchEvent">Create Match Event</string>
    <string name="cancel">Cancel</string>
    <string name="Submit">Submit</string> 
    <string name="undoEvent">Undo Last Event</string>
    <string name="MatchEvents"> \n Match Events: </string>
    <string name="redCard">Red Card</string>
    <string name="yellowCard">Yellow Card</string>
    <string name="injury">Injury</string>
    <string name="substitution">Substitution</string>
    <string name="Point">Point</string>
    <string name="Try">Try</string>
    <string name="Conversion">Conversion</string>
    <string name="Penalty">Penalty</string>
    <string name="DropGoal">Drop Goal</string>
    <string name="player1">Player 1:</string>
    <string name="player2">Player 2:</string>
    
    <string name="footballMatchEventPrompt">Choose a match event</string>
    <string-array name="footballMatchEvent_array">
    	<item>None</item>
        <item>Goal</item>
        <item>Red Card</item>
        <item>Yellow Card</item>
        <item>Injury</item>
        <item>Substitution</item>
    </string-array>
    
    <string name="GaelicMatchEventPrompt">Choose a match event</string>
    <string-array name="GaelicMatchEvent_array">
    	<item>None</item>
        <item>Goal</item>
        <item>Point</item>
        <item>Red Card</item>
        <item>Yellow Card</item>
        <item>Injury</item>
        <item>Substitution</item>
    </string-array>
    
    <string name="HurlingMatchEventPrompt">Choose a match event</string>
    <string-array name="HurlingMatchEvent_array">
    	<item>None</item>
        <item>Goal</item>
        <item>Point</item>
        <item>Red Card</item>
        <item>Yellow Card</item>
        <item>Injury</item>
        <item>Substitution</item>
    </string-array>
    
    <string name="RugbyMatchEventPrompt">Choose a match event</string>
    <string-array name="RugbyMatchEvent_array">
    	<item>None</item>
        <item>Try</item>
        <item>Conversion</item>
        <item>Penalty</item>
        <item>Drop Goal</item>
        <item>Red Card</item>
        <item>Yellow Card</item>
        <item>Injury</item>
        <item>Substitution</item>
    </string-array>
    <string name="addMatchEvents">Add Match Events:</string>
    <string name="finishMatch">Finish Match</string>
    <string name="previousMatches">Previous Matches</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="playerRankings">Player Rankings</string>
    <string name="nothingToDisplay">Nothing to display here.</string>
    <string name="sortBySport">Sort by sport:</string>
    
     <string name="SportPrompt">Choose a sport</string>
    <string-array name="Sport_array">
    	<item>Football</item>
        <item>Gaelic</item>
        <item>Hurling</item>
        <item>Rugby</item>
    </string-array>
    
    <string name="sortByDate">Sort by date</string>
    <string name="sortByTeamName">Sort by team name</string>
    <string name="vs">VS</string>
    <string name="pos">Pos</string>
    <string name="player">Player</string>
    <string name="score">Score</string>
    <string name="team">Team</string>
    <string name="points">Points</string>
    <string name="playerStats">Stats</string>
    <string name="playerStatistics">Player Statistics</string>
    <string name="playersName">Name</string>
    <string name="goals">Goals</string>
    <string name="tries">Tries</string>
    <string name="conversions">Conversions</string>
    <string name="dropGoals">Drop Goals</string>
    <string name="penalties">Penalties</string>
    <string name="usernameForm">Username:</string>
    <string name="passwordForm">Password:</string>
    <string name="LogIn">Log in</string>
    <string name="desc">missing image</string>
    <string name="mandatory">Mandatory Information</string>
    <string name="optional">Optional Information</string>
    <string name="footer">Enjoy the app  ~ Jonathan Blood</string>
    <string name="note">Add note:</string>
    
    
</resources>
