<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#eee9e9">

	 <!-- Include Action Bar -->
     <include layout="@layout/actionbar_layout"/>

	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/ScrollView01" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="match_parent" android:orientation="vertical">

			<!-- Team 1 input -->
			<TextView android:layout_height="wrap_content" android:text="@string/team1TV"
				android:layout_width="match_parent" android:id="@+id/team1TVHurling" />
			<AutoCompleteTextView
				android:completionThreshold="1" android:layout_height="wrap_content"
				android:layout_width="match_parent" android:text="@string/Empty"
				android:textColor="@color/black" android:id="@+id/team1AutoTVHurling"
				android:hint="@string/mandatory" />

			<!-- Team 2 input -->
			<TextView android:layout_width="match_parent"
				android:layout_height="wrap_content" android:text="@string/team2TV"
				android:id="@+id/team2TVHurling" />
			<AutoCompleteTextView android:layout_width="match_parent"
				android:completionThreshold="1" android:layout_height="wrap_content"
				android:textColor="@color/black" android:text="@string/Empty"
				android:id="@+id/team2AutoTVHurling" android:hint="@string/mandatory" />

			<!-- Venue input -->
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/VenueString"
				android:id="@+id/venueTVHurling" />
			<AutoCompleteTextView android:layout_width="match_parent"
				android:completionThreshold="1" android:layout_height="wrap_content"
				android:textColor="@color/black" android:text="@string/Empty"
				android:id="@+id/venueAutoTVHurling" android:hint="@string/optional" />

			<!-- Goal value input -->
			<TextView android:id="@+id/goalValueTVGaelic"
				android:layout_height="wrap_content" android:layout_width="match_parent"
				android:text="@string/goalValueString"></TextView>
			<EditText android:layout_height="wrap_content" android:inputType="number"
				android:layout_width="match_parent" android:id="@+id/goalValueETGaelic"
				android:text="@string/goalValue"></EditText>

			<!-- Point Value input -->
			<TextView android:id="@+id/pointValueTVGaelic"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:text="@string/pointValueString"></TextView>
			<EditText android:layout_height="wrap_content" android:inputType="number"
				android:layout_width="match_parent" android:id="@+id/pointValueETGaelic"
				android:text="@string/pointValue"></EditText>

			<!-- Number of Players input -->
			<TextView android:layout_height="wrap_content"
				android:layout_width="match_parent" android:text="@string/numOfPlayersString"
				android:id="@+id/numOfPlayersTVHurling" />
			<EditText android:layout_width="match_parent" android:inputType="number"
				android:layout_height="wrap_content" android:text="@string/numOfPlayersGaelic"
				android:id="@+id/numOfPlayersETHurling" />

			<!-- Minutes per half input -->
			<TextView android:layout_height="wrap_content"
				android:text="@string/minutesPerHalfString" android:layout_width="match_parent"
				android:id="@+id/minutesPerHalfTVHurling" />
			<EditText android:layout_width="match_parent" android:inputType="number"
				android:layout_height="wrap_content" android:text="@string/minutesPerHalfGaelic"
				android:id="@+id/minutesPerHalfETHurling" />

			<!-- Referee name input -->
			<TextView android:layout_height="wrap_content" android:text="@string/refereeNameString"
				android:layout_width="match_parent" android:id="@+id/refereeNameTVHurling" />
			<AutoCompleteTextView android:layout_width="match_parent"
				android:completionThreshold="1" android:layout_height="wrap_content"
				android:textColor="@color/black" android:id="@+id/refereeNameAutoTVHurling"
				android:text="@string/Empty" android:hint="@string/optional"/>

			<!-- Match type input -->
			<RadioGroup android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:id="@+id/radioGroupHurling">

				<TextView android:id="@+id/typeTVHurling"
					android:layout_height="wrap_content" android:text="@string/TypeString"
					android:layout_width="match_parent" />
				<RadioButton android:layout_width="wrap_content"
					android:text="@string/friendlyString" android:layout_height="wrap_content"
					android:id="@+id/friendlyRadioBNHurling" />
				<RadioButton android:layout_width="wrap_content"
					android:text="@string/leagueString" android:id="@+id/leagueRadioBNHurling"
					android:layout_height="wrap_content" />
				<RadioButton android:layout_width="wrap_content"
					android:text="@string/CupString" android:layout_height="wrap_content"
					android:id="@+id/cupRadioBNHurling" />
			</RadioGroup>

			<!--League/Cup name input -->
			<TextView android:layout_height="wrap_content"
				android:text="@string/leagueCupNameString" android:layout_width="match_parent"
				android:id="@+id/leagueCupNameTVHurling" />
			<AutoCompleteTextView
				android:completionThreshold="1" android:layout_height="wrap_content"
				android:layout_width="match_parent" android:text="@string/Empty"
				android:textColor="@color/black" android:id="@+id/leagueCupNameAutoTVHurling"
				android:hint="@string/optional" />

			<!-- Create match button -->
			<Button android:layout_height="wrap_content"
				android:layout_width="match_parent" android:id="@+id/createMatchBNHurling"
				android:text="@string/createMatchString" />


		</LinearLayout>
	</ScrollView>

</LinearLayout>