<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#eee9e9">

 	<!-- Include Action Bar -->
    <include layout="@layout/actionbar_layout"/>

	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/ScrollView01" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="match_parent" android:orientation="vertical">

			<!-- Team 1 Input -->
			<TextView android:layout_height="wrap_content" android:text="@string/team1TV"
				android:layout_width="match_parent" android:id="@+id/team1TVFootball" />
			<AutoCompleteTextView
				android:completionThreshold="1" android:layout_height="wrap_content"
				android:layout_width="match_parent" android:text="@string/Empty"
				android:textColor="@color/black" android:id="@+id/team1AutoTVFootball"
				android:hint="@string/mandatory" />

			<!-- Team 2 Input -->
			<TextView android:layout_width="match_parent"
				android:layout_height="wrap_content" android:text="@string/team2TV"
				android:id="@+id/team2TVFootball" />
			<AutoCompleteTextView android:layout_width="match_parent"
				android:completionThreshold="1" android:layout_height="wrap_content"
				android:textColor="@color/black" android:text="@string/Empty"
				android:id="@+id/team2AutoTVFootball" android:hint="@string/mandatory" />

			<!-- Venue Input -->
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/VenueString"
				android:id="@+id/venueTVFootball" />
			<AutoCompleteTextView android:layout_width="match_parent"
				android:completionThreshold="1" android:layout_height="wrap_content"
				android:textColor="@color/black" android:text="@string/Empty"
				android:id="@+id/venueAutoTVFootball"
				android:hint="@string/optional" />

			<!-- Number of Players Input -->
			<TextView android:layout_height="wrap_content"
				android:layout_width="match_parent" android:text="@string/numOfPlayersString"
				android:id="@+id/numOfPlayersTVFootball" />
			<EditText android:layout_width="match_parent"  android:inputType="number"
				android:layout_height="wrap_content" android:text="@string/numOfPlayers"
				android:id="@+id/numOfPlayersETFootball" />

			<!-- Minutes Per Half Input -->
			<TextView android:layout_height="wrap_content"
				android:text="@string/minutesPerHalfString" android:layout_width="match_parent"
				android:id="@+id/minutesPerHalfTVFootball" />
			<EditText android:layout_width="match_parent"  android:inputType="number"
				android:layout_height="wrap_content" android:text="@string/minutesPerHalfTime"
				android:id="@+id/minutesPerHalfETFootball" />

			<!-- Referee Name Input -->
			<TextView android:layout_height="wrap_content" android:text="@string/refereeNameString"
				android:layout_width="match_parent" android:id="@+id/refereeNameTVFootball" />
			<AutoCompleteTextView android:layout_width="match_parent"
				android:completionThreshold="1" android:layout_height="wrap_content"
				android:id="@+id/refereeNameAutoTVFootball" android:textColor="@color/black"
				android:text="@string/Empty" android:hint="@string/optional" />

			<!-- Match type Input -->
			<RadioGroup android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:id="@+id/radioGroupFootball">

				<TextView android:id="@+id/typeTVFootball"
					android:layout_height="wrap_content" android:text="@string/TypeString"
					android:layout_width="match_parent" />
				<RadioButton android:layout_width="wrap_content"
					android:text="@string/friendlyString" android:layout_height="wrap_content"
					android:id="@+id/friendlyRadioBNFootball" />
				<RadioButton android:layout_width="wrap_content"
					android:text="@string/leagueString" android:id="@+id/leagueRadioBNFootball"
					android:layout_height="wrap_content" />
				<RadioButton android:layout_width="wrap_content"
					android:text="@string/CupString" android:layout_height="wrap_content"
					android:id="@+id/cupRadioBNFootball" />
			</RadioGroup>

			<!-- League/Cup name Input -->
			<TextView android:layout_height="wrap_content"
				android:text="@string/leagueCupNameString" android:layout_width="match_parent"
				android:id="@+id/leagueCupNameTVFootball" />
			<AutoCompleteTextView
				android:completionThreshold="1" android:layout_height="wrap_content"
				android:layout_width="match_parent" android:text="@string/Empty"
				android:textColor="@color/black" android:id="@+id/leagueCupNameAutoTVFootball"
				android:hint="@string/optional" />

			<!-- Create match button -->
			<Button android:layout_height="wrap_content"
				android:layout_width="match_parent" android:id="@+id/createMatchBNFootball"
				android:text="@string/createMatchString" />


		</LinearLayout>
	</ScrollView>
</LinearLayout>
