<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#eee9e9">

	 <!-- Include Action Bar -->
     <include layout="@layout/actionbar_layout"/>

	<!-- DASHBOARD START -->
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:background="#eee9e9" 
		android:layout_weight="1">
		

		<com.android.layout.DashboardLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:background="#eee9e9">

			<Button android:id="@+id/dashboard_football_button" style="@style/DashboardButton"
				android:text="@string/football_activity" android:background="@drawable/button_state"
				android:drawableTop="@drawable/football_default" />
 
			<Button android:id="@+id/dashboard_gaelic_button" style="@style/DashboardButton"
				android:text="@string/gaelic_activity" android:background="@drawable/button_state"
				android:drawableTop="@drawable/gaelic_default" />

			<Button android:id="@+id/dashboard_hurling_button" style="@style/DashboardButton"
				android:text="@string/hurling_activity" android:background="@drawable/button_state"
				android:drawableTop="@drawable/hurling_default" />

			<Button android:id="@+id/dashboard_rugby_button" style="@style/DashboardButton"
				android:text="@string/rugby_activity" android:background="@drawable/button_state"
				android:drawableTop="@drawable/rugby_default" />

			<Button android:id="@+id/dashboard_statistics_button" style="@style/DashboardButton"
				android:text="@string/statistics_activity" android:background="@drawable/button_state"
				android:drawableTop="@drawable/statistics_default" />

			<Button android:id="@+id/dashboard_exit_button" style="@style/DashboardButton"
				android:text="@string/exit" android:background="@drawable/button_state"
				android:drawableTop="@drawable/exit_default" />

		</com.android.layout.DashboardLayout>
		
	</LinearLayout>
	<!-- DASHBOARD END -->
	
	<!-- Include footer -->
    <include layout="@layout/footer_layout"/>
	
</LinearLayout>